fixed cards on index.html fileand issue causing horizontal scrolling on mobile devices

--- a/css/style.css
+++ b/css/style.css
@@ -27,8 +27,9 @@ body {
   height: auto;
   justify-content: center;
   margin: 0 auto;
-  width: 100%;
   padding: 0;
+  width: 100%;
+  max-width: 100vw;
 }
 
 /* process sections */
@@ -39,7 +40,8 @@ section {
   justify-content: center;
   margin: 5rem auto;
   padding: 0;
-  width: 100vw;
+  width: 100%;
+  max-width: 100vw;
 }
 
 /* small width section container */
@@ -341,7 +343,6 @@ p {
   margin: 1rem auto 1rem auto;
   font-style: normal;
   width: 100%;
-  max-width: 300px;
   line-height: 150%;
   align-items: center;
 }
@@ -356,6 +357,7 @@ p.centered, #b {
 @media only screen and (min-device-width : 768px) and (max-device-width : 1024px) {
   h1 {
     font-size: 4.2rem;
+    max-width: 100%;
   }
 
   h2 {
@@ -391,7 +393,7 @@ p.centered, #b {
 @media only screen and (min-width : 1024px) {
   h1 {
     font-size: 4.8rem;
-    max-width: 700px
+    max-width: 100%;
   }
 
   h2 {
@@ -668,11 +670,9 @@ img.index_image {
 .card_image {
   background-color: inherit;
   display: block;
-  max-height: 60%;
-  overflow: hidden;
-  display: block;
+  height: auto;
   border-radius: 2px 2px 0 0;
-  padding: 1rem;
+  padding: 2rem 2rem 0 2rem;
   position: relative;
   left: 0;
   right: 0;
@@ -680,7 +680,12 @@ img.index_image {
   bottom: 0;
   width: 100%;
 }
-
+.card_image_div{
+  display: block;
+  height: 100%;
+  max-height: 50%;
+  overflow: hidden;
+}
 /* text content in card */
 .card_content {
   display: flex;
@@ -833,7 +838,15 @@ img.index_image {
   background-color: #3DD0D0;
 }
 
-
+.dailyui{
+  background-color: #000;
+}
+.dailyui_hero{
+  display: block;
+  width: 100%;
+  max-width: 90vw;
+  text-align: center;
+}
 /*-- parallax larger resize for Desktops and laptops -- */
 @media only screen and (min-width : 1224px) {
   .parallax {
